# lazyops

./: .env.example  .gitignore  README.md  agent-day1-audit.md  agent-day2-contracts.md  agent-task.md  backend-day1-audit.md  backend-day2-persistence-foundation.md  backend-day3-api-contract-foundation.md  backend-task.md  cli-day1-rule-lock.md  cli-task.md  docker-compose.prod.yml  docker-compose.yml  nginx.config
.github/workflows/: ci.yml  deploy-production.yml  docker-release.yml
.gocache/: trim.txt
.gocache/00/: 005c347e6adf26322cdd2e34acbe63a6f27990b1240e31d339851159129cb5ff-a  005fa9c56937389d9e71b6c92cec3e36704caa0da4593bbc770e465774a8e0fe-a  (+5 more)
.qwen/: settings.json
agent/: .dockerignore  Dockerfile  go.mod
backend/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum
cli/: go.mod  package-lock.json  package.json  tawn-lazyops-cli-0.1.0.tgz  tawn-lazyops-cli-0.1.1.tgz  tawn-lazyops-cli-0.1.2.tgz
docs/: contracts-matrix.md  feature-catalog.md  index.md  project-report-diagrams.md  testing_guide.md  usecase.md
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
guide/: agent-guide.md  backend-guide.md  cli-guide.md  frontend-guide.md  lazyops-implementation-master-plan.md  lazyops-master-des.md  project-rules.md
sdks/: README.md
sdks/python/: pyproject.toml
sdks/python/lazyops/: __init__.py  client.py  types.py
(+2603 files in other folders)
