[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyops-sdk"
version = "0.1.0"
description = "LazyOps SDK for service discovery and communication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lazyops/lazyops"
"Bug Tracker" = "https://github.com/lazyops/lazyops/issues"
